--- a/config/config.yml.dist
+++ b/config/config.yml.dist
@@ -1,11 +1,44 @@
-# This is the configuration file for your extension.
-# This file is written in the yaml format and will be copied as {extension-name}.{vendor-name}.yml into /app/config/extensions.
-# See Extension.php or https://docs.bolt.cm/extensions/basics/configuration how to access it.
+new_characters:
+    action: new
+    contenttype: characters
+    options:
+        message: "Une nouvelle candidature vient d'être postée ! Evaluer la feuille de personnage [link]"
+    webhook: https://discordapp.com/api/webhooks/710095383530962945/eMNC8HLCvl5WVTCC_zv9SCHq5JB24Nuf7HBPFZ77XEteckXmlAQkZKu0tdkVVicavr3R
 
-foo: 1
-bar: 2.5
-baz: foo bar
-
-example:
-  foo: 3
-  bar: baz
+change_modules:
+    action:
+        type: update
+        fields:
+            modules_block: ['id', 'name']
+    contenttype: modules
+    options:
+        fields: 
+            datechanged: simple
+            modules_block: ['id', 'name']
+        message: @here Dernière mise à jour des modules le [datechanged] ```[modules_block] ```
+    webhook: https://discordapp.com/api/webhooks/710095383530962945/eMNC8HLCvl5WVTCC_zv9SCHq5JB24Nuf7HBPFZ77XEteckXmlAQkZKu0tdkVVicavr3R
+    username: Liste des modules
+    # avatar_url:
+    # embeds:
+    #     title: foo 
+    #     color: 3366ff
+    #     type: rich
+    #     description: foooo
+    #     url: http://conanexiles.vassharans.com/
+    #     image:
+    #     footer:
+    #         text:
+    #         icon_url:
+    #     image:
+    #         url:
+    #     thumbnail:
+    #         url:
+    #     author:
+    #         name:
+    #         url: http://conanexiles.vassharans.com/
+    #     fields:
+    #         foo :
+    #             name:
+    #             value:
+    #             inline:
+            
